--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -4,9 +4,18 @@
 }
 
 body {
+  margin-top: 3em;
   background-color: #191970 !important;
   color: #fff !important;
 }
 
 #home {
+}
+
+h1.name {
+  font-size: 4.5em;
+}
+
+footer {
+  margin: 2em 0;
 }
