--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -1,12 +1,12 @@
 * {
   font-family: "Inter var", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 16px;
 }
 
 body {
   margin-top: 3em;
   background-color: #191970 !important;
   color: #fff !important;
+  font-size: 18px;
 }
 
 #home {
@@ -17,5 +17,18 @@ h1.name {
 }
 
 footer {
-  margin: 2em 0;
+  margin: 7em 0;
+  font-size: 14px;
 }
+
+a, ul.nav a {
+  color: lighten(rgb(13, 110, 253), 30%);
+  text-decoration: none;
+}
+
+.copyright {
+  border-top: 1px solid darken(#ffffff, 60%);
+  padding-top: 0.75em;
+  margin-top: 0.75em;
+}
+
