--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -20,4 +20,4 @@
   .row
     .col-lg-12
       %section.projects
-        = render 'projects', collection: @projects
+        = render 'project', collection: @projects
