--- a/app/views/admin/projects/index.html.haml
+++ b/app/views/admin/projects/index.html.haml
@@ -12,9 +12,9 @@
         %td= project.image_url
         %td= project.working_url
         %td= project.order
-        %td= link_to 'Show', project
-        %td= link_to 'Edit', edit_project_path(project)
-        %td= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }
+        %td= link_to 'Show', admin_project_path(project)
+        %td= link_to 'Edit', edit_admin_project_path(project)
+        %td= link_to 'Destroy', admin_project_path(project), method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
 
