--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,7 +1,7 @@
 %footer.container
   Source:
   = link_to "github.com/carsoncole/about", "https://github.com/carsoncole/about.git", target: '_blank'
-  - if signed_in?
+  - if signed_in? && !Setting.first.nil?
     \|
     = link_to "Settings", edit_admin_setting_path(Setting.first) unless Setting.first.nil?
 
