--- a/app/views/admin/experiences/_form.html.haml
+++ b/app/views/admin/experiences/_form.html.haml
@@ -1,31 +1,31 @@
-= form_for @admin_experience do |f|
-  - if @admin_experience.errors.any?
+= form_for [:admin, @experience] do |f|
+  - if @experience.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@admin_experience.errors.count, "error")} prohibited this admin_experience from being saved:"
+      %h2= "#{pluralize(@experience.errors.count, "error")} prohibited this experience from being saved:"
       %ul
-        - @admin_experience.errors.full_messages.each do |message|
+        - @experience.errors.full_messages.each do |message|
           %li= message
 
-  .field
+  .form-group.mb-3
     = f.label :title
-    = f.text_field :title
-  .field
+    = f.text_field :title, class: 'form-control'
+  .form-group.mb-3
     = f.label :name
-    = f.text_field :name
-  .field
+    = f.text_field :name, class: 'form-control'
+  .form-group.mb-3
     = f.label :url
-    = f.text_field :url
-  .field
+    = f.text_field :url, class: 'form-control'
+  .form-group.mb-3
     = f.label :start_date
-    = f.text_field :start_date
-  .field
+    = f.text_field :start_date, class: 'form-control'
+  .form-group.mb-3
     = f.label :end_date
-    = f.text_field :end_date
-  .field
+    = f.text_field :end_date, class: 'form-control'
+  .form-group.mb-3
     = f.label :description
-    = f.text_area :description
-  .field
+    = f.text_area :description, class: 'form-control'
+  .form-group.mb-5
     = f.label :order
-    = f.number_field :order
+    = f.number_field :order, class: 'form-control'
   .actions
-    = f.submit 'Save'
+    = f.submit 'Save', class: 'btn btn-primary'
