--- a/app/views/admin/experiences/edit.html.haml
+++ b/app/views/admin/experiences/edit.html.haml
@@ -1,7 +1,4 @@
-%h1 Editing admin_experience
+%h1 Experience
 
 = render 'form'
 
-= link_to 'Show', @admin_experience
-\|
-= link_to 'Back', admin_experiences_path
