--- a/app/views/admin/experiences/show.html.haml
+++ b/app/views/admin/experiences/show.html.haml
@@ -2,26 +2,26 @@
 
 %p
   %b Title:
-  = @admin_experience.title
+  = @experience.title
 %p
   %b Name:
-  = @admin_experience.name
+  = @experience.name
 %p
   %b Url:
-  = @admin_experience.url
+  = @experience.url
 %p
   %b Start date:
-  = @admin_experience.start_date
+  = @experience.start_date
 %p
   %b End date:
-  = @admin_experience.end_date
+  = @experience.end_date
 %p
   %b Description:
-  = @admin_experience.description
+  = @experience.description
 %p
   %b Order:
-  = @admin_experience.order
+  = @experience.order
 
-= link_to 'Edit', edit_admin_experience_path(@admin_experience)
+= link_to 'Edit', edit_admin_experience_path(@experience)
 \|
 = link_to 'Back', admin_experiences_path
