--- a/app/views/admin/experiences/_form.html.haml
+++ b/app/views/admin/experiences/_form.html.haml
@@ -22,6 +22,9 @@
     = f.label :end_date
     = f.text_field :end_date, class: 'form-control'
   .form-group.mb-3
+    = f.label :skillset
+    = f.text_field :skillset, class: 'form-control'
+  .form-group.mb-3
     = f.label :description
     = f.text_area :description, class: 'form-control'
   .form-group.mb-5
