--- a/app/assets/stylesheets/base.scss.erb
+++ b/app/assets/stylesheets/base.scss.erb
@@ -1,12 +1,18 @@
+$background-color: <%= BACKGROUND_COLOR %>;
+
 * {
   font-family: "Inter var", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 body {
   margin-top: 3em;
-  background-color: #191970 !important;
+  background-color: $background-color;
   color: #fff !important;
   font-size: 18px;
+}
+
+table.table {
+  color: #fff;
 }
 
 #home {
@@ -17,14 +23,19 @@ body {
     }
   }
   section.contact {
-    margin-bottom: 3em;
+    margin-bottom: 4em;
+  }
+  h2 {
+    margin-bottom: 1em;
+  }
+  section {
+    margin-bottom: 4em;
   }
 }
 
 h1 {
   margin-bottom: 2em;
   font-size: 3.5em;
-
 }
 
 footer {
@@ -33,10 +44,9 @@ footer {
 }
 
 a, ul.nav a {
-  color: lighten(rgb(13, 110, 253), 30%);
+  color: lighten($background-color, 60%);
   text-decoration: none;
 }
-
 
 .copyright {
   border-top: 1px solid darken(#ffffff, 60%);
