--- a/app/views/admin/projects/_form.html.haml
+++ b/app/views/admin/projects/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @project do |f|
+= form_for [:admin, @project] do |f|
   - if @project.errors.any?
     #error_explanation
       %h2= "#{pluralize(@project.errors.count, "error")} prohibited this project from being saved:"
@@ -6,23 +6,25 @@
         - @project.errors.full_messages.each do |message|
           %li= message
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :source_url
-    = f.text_field :source_url
-  .field
-    = f.label :description
-    = f.text_field :description
-  .field
-    = f.label :image_url
-    = f.text_field :image_url
-  .field
-    = f.label :working_url
-    = f.text_field :working_url
-  .field
-    = f.label :order
-    = f.number_field :order
+  .form-group.mb-3.mb-3
+    .mb-2= f.label :name
+    = f.text_field :name, class: 'form-control'
+  .form-group.mb-3
+    .mb-2= f.label :source_url
+    = f.text_field :source_url, class: 'form-control'
+  .form-group.mb-3
+    .mb-2= f.label :description
+    = f.text_area :description, class: 'form-control', rows: 10
+  .form-group.mb-3
+    .mb-2= f.label :image_url
+    = f.text_field :image_url, class: 'form-control'
+  .form-group.mb-3
+    .mb-2= f.label :working_url
+    = f.text_field :working_url, class: 'form-control'
+  .row
+    .col-lg-3
+      .form-group.mb-3
+        .mb-2= f.label :order
+        = f.number_field :order, class: 'form-control'
   .actions
-    = f.submit 'Save'
+    = f.submit 'Save', class: 'btn btn-primary'
