--- a/app/views/home/_experience.html.haml
+++ b/app/views/home/_experience.html.haml
@@ -10,7 +10,7 @@
 
   .description=experience.description
 
-  - if SKILLS_DISPLAYED
+  - if EXPERIENCE_SKILLS_DISPLAYED
     .skills
       - experience.skill_list.each do |skill|
         .skill= skill
