--- a/app/assets/stylesheets/base.scss.erb
+++ b/app/assets/stylesheets/base.scss.erb
@@ -23,10 +23,11 @@ table.table {
     }
   }
   section.contact {
-    margin-bottom: 4em;
+    margin-bottom: 6em;
   }
   h2 {
     margin-bottom: 1em;
+    font-size: 2em;
   }
   section {
     margin-bottom: 4em;
