--- a/app/views/admin/settings/_form.html.haml
+++ b/app/views/admin/settings/_form.html.haml
@@ -19,6 +19,12 @@
         = f.text_field :description, class: 'form-control'
 
   .row
+    .col-lg-12
+      .form-group.mb-5
+        .mb-3= f.label :meta_description
+        = f.text_field :meta_description, class: 'form-control'
+
+  .row
     .col-lg-8
       .form-group.mb-5
         .mb-3= f.label :address
