--- a/app/assets/stylesheets/base.scss.erb
+++ b/app/assets/stylesheets/base.scss.erb
@@ -20,6 +20,7 @@ table.table {
     &.name {
       font-size: 4.5em;
       margin-bottom: 0;
+      line-height: 1.1;
     }
   }
   section.contact {
