[feature] education added

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -39,3 +39,10 @@
           %h2 Experience
           = render partial: 'experience', collection: @experiences
 
+  .row
+    .col-lg-12
+      %section.educations
+        %h2 Education
+        = render partial: 'education', collection: @educations
+
+
