--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -33,6 +33,10 @@
             = link_to admin_experiences_path, class: 'nav-link' do
               %i.bi.bi-person-workspace
               Experiences
+          %li.nav-item
+            = link_to admin_educations_path, class: 'nav-link' do
+              %i.bi.bi-person-workspace
+              Education
 
       .col-lg-9
         = yield
