[feature] pdf download added

--- a/app/views/home/_education.html.haml
+++ b/app/views/home/_education.html.haml
@@ -2,5 +2,5 @@
   .education
     .name= education.name
     .title= education.title
-    .dates= education.start_date
+    .dates= compact_date_2(education.end_date)
 
