--- a/app/assets/stylesheets/experience.scss.erb
+++ b/app/assets/stylesheets/experience.scss.erb
@@ -1,3 +1,5 @@
+$background-color: <%= BACKGROUND_COLOR %>;
+
 article.experience {
   margin-bottom: 2em;
   border-top: 1px solid darken(#ffffff, 50%);
@@ -21,9 +23,10 @@ article.experience {
 
 .skill {
   display: inline-block;
-  background-color: lighten(#191970, 10%);
+  background-color: lighten($background-color, 10%);
+  color: lighten($background-color, 70%);
   border-radius: 3px;
-  padding: 0.03em 0.5em;
+  padding: 0.03em 0.6em;
   line-height: 1.5;
   font-size: 0.8em;
   margin: 0.2em 0.2em;
@@ -34,6 +37,7 @@ article.experience {
   .skill {
     font-size: 1em;
     font-weight: 900;
+    color: lighten($background-color, 80%);
   }
 }
 
