--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -47,8 +47,8 @@
 
 
 
-  .row
-    .col-md-12
-      .resume-link
-        = link_to "Download Resume", resume_path(format: :pdf), target: '_blank'
-        %i.far.fa-arrow-alt-circle-down
+  / .row
+  /   .col-md-12
+  /     .resume-link
+  /       = link_to "Download Resume", resume_path(format: :pdf), target: '_blank'
+  /       %i.far.fa-arrow-alt-circle-down
