--- a/app/assets/stylesheets/base.scss.erb
+++ b/app/assets/stylesheets/base.scss.erb
@@ -26,11 +26,14 @@ table.table {
   section.contact {
     margin-bottom: 6em;
   }
-  h2 {
-    margin-bottom: 1em;
-    font-size: 2em;
-  }
   section {
+    h2 {
+      color: lighten($background-color, 60%);
+      margin-bottom: 1em;
+      font-size: 1.2em;
+      font-weight: 800;
+      text-transform: uppercase;
+    }
     margin-bottom: 4em;
   }
 }
