--- a/app/views/admin/settings/_form.html.haml
+++ b/app/views/admin/settings/_form.html.haml
@@ -54,5 +54,11 @@
         .mb-3= f.label :portfolio_url
         = f.text_field :portfolio_url, class: 'form-control'
 
+  .row
+    .col-lg-8
+      .form-group.mb-5
+        .mb-3= f.label :summary
+        = f.text_area :summary, class: 'form-control'
+
   .actions
     = f.submit 'Save', class: 'btn btn-primary'
