--- a/app/assets/stylesheets/pdf.css
+++ b/app/assets/stylesheets/pdf.css
@@ -1,6 +1,3 @@
-$dim: #aaaaaa;
-$border: rgb(210, 210, 215);
-
 body {
   font-size: 14px;
   font-family: "SF Pro Display", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -29,7 +26,7 @@ header {
 
 .section {
   -webkit-font-smoothing: antialiased;
-  border-top: 1px solid $border;
+  border-top: 1px solid rgb(210, 210, 215);
   padding-top: 12px;
   margin-bottom: 2.1rem;
 }
@@ -62,7 +59,7 @@ article {
   }
   .skills, .period {
     font-size: 0.85em;
-    color: $dim;
+    color: #aaaaaa;
   }
   .skills, .period, .description {
     margin-bottom: 8px;
@@ -71,7 +68,7 @@ article {
 .status {
   margin-top: 24px;
   font-size: 0.85em;
-  color: $dim;
+  color: #aaaaaa;
   display: inline-block;
   width: 100%
 }
