--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,51 +1,52 @@
-%div.mx-5
-  %div
-    %h1.text-6xl.font-bold.mb-6= Setting&.first&.name || 'Name'
+%div
+  %div.mb-20
+    %div.mb-12(class= 'lg:w-2/3')
+      %h1.text-6xl.font-bold.mb-2= Setting&.first&.name || 'Name'
 
-    %h2.description.mb-7= Setting&.first&.description || 'Description'
+      %h2.description.text-3xl= Setting&.first&.description || 'Description'
 
-  %div
-    %section.contact.mb-7
-      = Setting&.first&.email || 'email'
-      - if Setting&.first&.phone.present?
-        \|
-        = Setting&.first&.phone || 'phone'
-      - if Setting&.first&.address.present?
-        \|
-        = Setting&.first&.address
-      %br
-      - if Setting&.first&.linkedin_url.present?
-        = link_to Setting&.first&.linkedin_url, Setting&.first&.linkedin_url
-      - if Setting&.first&.portfolio_url.present?
-        \|
-        = link_to Setting&.first&.portfolio_url, Setting&.first&.portfolio_url
+    %div
+      %section.contact.mb-7
+        = Setting&.first&.email || 'email'
+        - if Setting&.first&.phone.present?
+          \|
+          = Setting&.first&.phone || 'phone'
+        - if Setting&.first&.address.present?
+          \|
+          = Setting&.first&.address
+        %br
+        - if Setting&.first&.linkedin_url.present?
+          = link_to Setting&.first&.linkedin_url, Setting&.first&.linkedin_url
+        - if Setting&.first&.portfolio_url.present?
+          \|
+          = link_to Setting&.first&.portfolio_url, Setting&.first&.portfolio_url
 
   %div
     - if Setting&.first&.summary.present?
-      %div
+      %div.mb-12(class= 'lg:w-2/3')
         %h2.text-indigo-400.font-bold.mb-2.font-2xl.uppercase.border-b.border-indigo-900.mb-4.pb-2 Summary
         %p.mb-7= Setting.first.summary
 
     - if PROJECTS_DISPLAYED
-      %div
-        %h2.text-indigo-400.font-bold.mb-2.font-2xl.uppercase.border-b.border-indigo-900.mb-4.pb-2 Open-Source Projects
-        .carousel
-          = render partial: 'projects/project', collection: @projects
+      %div.mb-12(class= 'lg:w-2/3')
+        %h2.text-indigo-400.font-bold.mb-2.font-2xl.uppercase.border-b.border-indigo-900.mb-4.pb-2 Projects
+        = render partial: 'projects/project', collection: @projects
 
     - if SKILLSETS_DISPLAYED
-      %div
-
+      %div.mb-12(class= 'lg:w-2/3')
         %h2.text-indigo-400.font-bold.mb-2.font-2xl.uppercase.border-b.border-indigo-900.mb-4.pb-2 Skills
-
-        - @tags.each do |tag|
-          .skill= tag.name
+        %div.text-sm
+          - @tags.each do |tag|
+            .skill.border.float-left.m-1.bg-white.p-3.rounded.shadow-lg.text-black.py-1.px-4.font-bold= tag.name
+        %div.clear-both
 
     - if EXPERIENCES_DISPLAYED
-      %div
-        %h2.text-indigo-400.font-bold.mb-2.font-2xl.uppercase.border-b.border-indigo-900.mb-4.pb-2 Experience
-        = render partial: 'experience', collection: @experiences
 
-      %div
+      %div.mb-12(class= 'lg:w-2/3')
+        %h2.text-indigo-400.font-bold.mb-2.font-2xl.uppercase.mb-4.pb-2 Experience
+        = render partial: 'experiences/experience', collection: @experiences
+
+      %div.mb-12(class= 'lg:w-2/3')
         %h2.text-indigo-400.font-bold.mb-2.font-2xl.uppercase.border-b.border-indigo-900.mb-4.pb-2 Education
         = render partial: 'education', collection: @educations
 
