--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,8 @@
   %head
     = render 'shared/head'
 
-  %body.bg-indigo-950
-    = yield
+  %body.bg-indigo-950.text-white
+    %div.m-7(class='lg:w-2/3')
+      = yield
 
-  = render 'shared/footer'
+      = render 'shared/footer'
