--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,9 +1,9 @@
 %div
   %div.mb-20
-    %div.mb-12(class= 'lg:w-2/3')
-      %h1.text-6xl.font-bold.mb-2= Setting&.first&.name || 'Name'
+    %div.mb-12
+      %h1.text-4xl.font-bold.md:text-6xl.mb-2= Setting&.first&.name || 'Name'
 
-      %h2.description.text-3xl= Setting&.first&.description || 'Description'
+      %h2.description.text-2xl.md:text-3xl= Setting&.first&.description || 'Description'
 
     %div
       %section.contact.mb-7
@@ -16,31 +16,43 @@
           = Setting&.first&.address
         %br
         - if Setting&.first&.linkedin_url.present?
-          = link_to Setting&.first&.linkedin_url, Setting&.first&.linkedin_url
-        - if Setting&.first&.portfolio_url.present?
-          \|
-          = link_to Setting&.first&.portfolio_url, Setting&.first&.portfolio_url
+          %div.text-indigo-400
+            = link_to Setting&.first&.linkedin_url, target: '_blank' do
+              %span.float-left.pr-1
+                LinkedIn
+              %svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5")
+                %path(d="M12.232 4.232a2.5 2.5 0 013.536 3.536l-1.225 1.224a.75.75 0 001.061 1.06l1.224-1.224a4 4 0 00-5.656-5.656l-3 3a4 4 0 00.225 5.865.75.75 0 00.977-1.138 2.5 2.5 0 01-.142-3.667l3-3z")
+                %path(d="M11.603 7.963a.75.75 0 00-.977 1.138 2.5 2.5 0 01.142 3.667l-3 3a2.5 2.5 0 01-3.536-3.536l1.225-1.224a.75.75 0 00-1.061-1.06l-1.224 1.224a4 4 0 105.656 5.656l3-3a4 4 0 00-.225-5.865z")
+
+
+
+
+
+
+        / - if Setting&.first&.portfolio_url.present?
+        /   \|
+        /   = link_to Setting&.first&.portfolio_url, Setting&.first&.portfolio_url
 
   %div
     - if Setting&.first&.summary.present?
-      %div.mb-12(class= 'lg:w-2/3')
-        %h2.text-indigo-400.font-bold.mb-2.font-2xl.uppercase.border-b.border-indigo-900.mb-4.pb-2 Summary
+      %div.mb-12
+        %h2.text-indigo-200.font-bold.mb-2.font-2xl.uppercase.border-b.border-indigo-900.mb-4.pb-2 Summary
         %p.mb-7= Setting.first.summary
 
     - if PROJECTS_DISPLAYED
       %div.mb-12
-        %div.border-b.border-indigo-900.mb-5(class= 'lg:w-2/3')
-          .float-left.text-indigo-400.font-bold.mb-2.font-2xl.uppercase Projects
+        %div.border-b.border-indigo-900.mb-5
+          .float-left.text-indigo-200.font-bold.mb-2.font-2xl.uppercase Projects
           - if signed_in?
-            .float-right
+            .float-right.text-indigo-400
               = link_to 'edit', admin_projects_path
           .clear-both
         %div
           = render partial: 'projects/project', collection: @projects
 
     - if SKILLSETS_DISPLAYED
-      %div.mb-12(class= 'lg:w-2/3')
-        %h2.text-indigo-400.font-bold.mb-2.font-2xl.uppercase.border-b.border-indigo-900.mb-4.pb-2 Skills
+      %div.mb-12
+        %h2.text-indigo-200.font-bold.mb-2.font-2xl.uppercase.border-b.border-indigo-900.mb-4.pb-2 Skills
         %div.text-sm
           - @tags.each do |tag|
             .skill.border.float-left.m-1.bg-white.p-3.rounded.shadow-lg.text-black.py-1.px-4.font-bold= tag.name
@@ -48,19 +60,19 @@
 
     - if EXPERIENCES_DISPLAYED
       %div.mb-12
-        %div.border-b.border-indigo-900.mb-5(class= 'lg:w-2/3')
-          .float-left.text-indigo-400.font-bold.mb-2.font-2xl.uppercase Experience
+        %div.border-b.border-indigo-900.mb-5
+          .float-left.text-indigo-200.font-bold.mb-2.font-2xl.uppercase Experience
           - if signed_in?
-            .float-right
+            .float-right.text-indigo-400
               = link_to 'edit', admin_experiences_path
           .clear-both
         = render partial: 'experiences/experience', collection: @experiences
 
       %div.mb-12
-        %div.border-b.border-indigo-900.mb-5(class= 'lg:w-2/3')
-          .float-left.text-indigo-400.font-bold.mb-2.font-2xl.uppercase Education
+        %div.border-b.border-indigo-900.mb-5
+          .float-left.text-indigo-200.font-bold.mb-2.font-2xl.uppercase Education
           - if signed_in?
-            .float-right
+            .float-right.text-indigo-400
               = link_to 'edit', admin_educations_path
           .clear-both
         = render partial: 'education', collection: @educations
