--- a/app/views/admin/experiences/_form.html.haml
+++ b/app/views/admin/experiences/_form.html.haml
@@ -15,6 +15,9 @@
   .form-group.mb-3
     .mb-2= f.label :employer_url
     = f.text_field :url, class: 'form-control'
+  .form-group.mb-3
+    .mb-2= f.label :location
+    = f.text_field :location, class: 'form-control'
   .row
     .col-lg-5
       .form-group.mb-3
