--- a/app/views/home/_education.html.haml
+++ b/app/views/home/_education.html.haml
@@ -1,6 +1,8 @@
-.education-panel
-  .education
-    .name= education.name
-    .title= education.title
-    .dates= compact_date_2(education.end_date)
+%div.mb-7
+  %span.text-lg.font-bold
+    = succeed(", ") do
+      = education.name
+    = education.title
+  %div
+    = compact_date_2(education.end_date)
 
