--- a/app/views/home/_education.html.haml
+++ b/app/views/home/_education.html.haml
@@ -1,8 +1,6 @@
-%div.mb-7
-  %span.text-lg.font-bold
-    = succeed(", ") do
-      = education.name
-    = education.title
-  %div
-    = compact_date_2(education.end_date)
-
+%h1.text-indigo-200.font-bold.mb-6.font-2xl.uppercase.border-b.border-indigo-900.pb-3
+  - if signed_in?
+    = link_to "Education", admin_educations_path
+  - else
+    Education
+= render partial: 'educations/education', collection: @educations
