--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -1,9 +1,7 @@
 
-%div.mb-4
-  %span.text-lg.font-bold
+%article.mb-4
+  %h1.text-lg.font-bold
     = link_to project.name, project
-  %span.text-indigo-400
-    = link_to 'edit', edit_admin_project_path(project)
   %div.text-indigo-400
     = link_to project.source_url, project.source_url, target: '_blank'
 
@@ -11,7 +9,7 @@
     .project-image
       = image_tag project.image_url, class: 'img-fluid'
 
-  .description= project.description
+  %p= project.description
 
   - if project.working_url.present?
     %p= link_to project.working_url, project.working_url, target: '_blank'
