--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -5,5 +5,5 @@
       Source code available at
 
   %div.flex.justify-center
-    %div.text-indigo-400
+    %div
       = link_to "github.com/carsoncole/about", "https://github.com/carsoncole/about.git", target: '_blank'
