--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,5 +1,5 @@
 %footer
-  %div.flex.justify-center.text-xs.text-indigo-300
+  %div.flex.justify-center.text-xs
 
     %span.p-1= link_to "Home", root_path
     - unless action_name == 'about'
