--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  a {
+    @apply text-slate-400;
+  }
+  section h1 {
+    @apply text-slate-600;
+  }
+}
+
+
+
 /*
 
 @layer components {
