--- a/app/views/experiences/_experience.html.haml
+++ b/app/views/experiences/_experience.html.haml
@@ -1,4 +1,4 @@
-%article.mb-7.rounded.shadow-inner.p-5.bg-indigo-100.text-black
+%article.mb-7.border.border-slate-200.shadow.p-5.text-black
   = render partial: 'experiences/title', locals: { experience: experience }
 
   %div.mb-3
@@ -13,7 +13,7 @@
   - if EXPERIENCE_SKILLS_DISPLAYED
     %div
       - experience.skill_list.each do |skill|
-        %span.pr-1.text-indigo-300.text-sm
+        %span.pr-1.text-xs.border.border-slate-200.py-1.px-2.mr-2.text-slate-500
           = skill
 
 
