--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,9 @@
 %header.mb-20.mt-8
   %div.mb-8
+
     %h1.text-4xl.font-bold.md:text-6xl.mb-5= Setting&.first&.name || 'Name'
+
+    = image_tag "carson.jpeg", class: 'ml-2 mb-10 float-right w-60 h-60 rounded-full shadow-xl dark:shadow-gray-800'
 
     %p.text-2xl.md:text-3xl= Setting&.first&.description || 'Description'
 
